# picow_xbox

./: README.md
src/: CMakeLists.txt  bt_hid.c  main.c
